@@ -105,26 +105,6 @@ class RequestHandler(object):
         self.request = request
         self.response = response
 
-    def initialize(self, request, response):
-        """Initializes this request handler with the given Request and
-        Response.
-
-        .. warning::
-           This is deprecated. It is here for compatibility with webapp only.
-           Use __init__() instead.
-
-        :param request:
-            A ``webapp.Request`` instance.
-        :param response:
-            A :class:`Response` instance.
-        """
-        logging.warning('RequestHandler.initialize() is deprecated. '
-            'Use __init__() instead.')
-
-        self.app = WSGIApplication.active_instance
-        self.request = request
-        self.response = response
-
     def __call__(self, _method, *args, **kwargs):
         """Dispatches the requested method.
 
@@ -890,12 +870,7 @@ class Router(object):
 
             handler_class = self._handlers[handler_class]
 
-        try:
-            handler = handler_class(app, request, response)
-        except TypeError, e:
-            # Support webapp's initialize().
-            handler = handler_class()
-            handler.initialize(request, response)
+        handler = handler_class(app, request, response)
 
         try:
             handler(request.method.lower(), *args, **kwargs)
@@ -996,8 +971,6 @@ class WSGIApplication(object):
         self.debug = debug
         self.router = self.router_class(routes)
         self.config = self.config_class(config)
-        # For compatibility with webapp only. Don't use it!
-        WSGIApplication.active_instance = self
 
     def __call__(self, environ, start_response):
         """Called by WSGI when a request comes in. Calls :meth:`wsgi_app`."""
@@ -1026,9 +999,6 @@ class WSGIApplication(object):
             optional exception context to start the response.
         """
         try:
-            # For compatibility with webapp only. Don't use it!
-            WSGIApplication.active_instance = self
-
             self.request = request = self.request_class(environ)
             response = self.response_class()
 
